--- a/src/main/webapp/WEB-INF/jsp/common/navigation.jspf
+++ b/src/main/webapp/WEB-INF/jsp/common/navigation.jspf
@@ -4,7 +4,10 @@
     </div>
     <div class="navbar-collapse">
         <ul class="nav navbar-nav">
-            <li class="active"><a href="/login">Home</a></li>
+            <!-- Step 21: Navigate to login when clicking on Home
+                <li class="active"><a href="/login">Home</a></li>
+            -->
+            <li class="active"><a href="/">Home</a></li>
             <li><a href="/list-todos">Todos</a></li>
 
         </ul>
