--- a/src/main/webapp/WEB-INF/jsp/common/navigation.jspf
+++ b/src/main/webapp/WEB-INF/jsp/common/navigation.jspf
@@ -11,5 +11,8 @@
             <li><a href="/list-todos">Todos</a></li>
 
         </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="/logout">Logout</a></li>
+        </ul>
     </div>
 </nav>
